--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,6 +24,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: rust-build/rust-build.action@v1.4.5
+    - name: Build
+      run: cargo build --verbose --release
 
 
