--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,8 @@ jobs:
     name: release ubuntu
     runs-on: ubuntu-latest
     permissions: write-all
-
+    env:
+      GH_TOKEN: ${{ github.token }}
     steps:
     - uses: actions/checkout@v4
     - name: Build
@@ -20,7 +21,8 @@ jobs:
     name: release windows
     runs-on: windows-latest
     permissions: write-all
-
+    env:
+      GH_TOKEN: ${{ github.token }}
     steps:
     - uses: actions/checkout@v4
     - name: Build
