--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ log = "0.4.22"
 rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
 rust_xlsxwriter = {version = "0.80.0", features = ["chrono"]}
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.134"
 thiserror = "2.0.9"
